// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FixedList view renders correctly custom ItemContainer 1`] = `
<div
  className="bar"
>
  <div>
    <div>
      1
    </div>
  </div>
  <div>
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`FixedList view renders correctly with default props 1`] = `
<div
  className="bar"
/>
`;

exports[`FixedList view renders correctly with many child items 1`] = `
<div
  className="bar"
>
  <ItemContainer
    onClick={[Function]}
    selected={true}
  >
    <div>
      1
    </div>
  </ItemContainer>
  <ItemContainer
    onClick={[Function]}
    selected={false}
  >
    <div>
      2
    </div>
  </ItemContainer>
  <ItemContainer
    onClick={[Function]}
    selected={false}
  >
    <div>
      3
    </div>
  </ItemContainer>
  <ItemContainer
    onClick={[Function]}
    selected={false}
  >
    <div>
      4
    </div>
  </ItemContainer>
</div>
`;

exports[`FixedList view renders correctly with one child item 1`] = `
<div
  className="bar"
>
  <ItemContainer
    onClick={[Function]}
    selected={true}
  >
    <div />
  </ItemContainer>
</div>
`;

exports[`FixedList view renders correctly with selected item given arbitrary 1`] = `
<div
  className="bar"
>
  <ItemContainer
    onClick={[Function]}
    selected={false}
  >
    <div>
      1
    </div>
  </ItemContainer>
  <ItemContainer
    onClick={[Function]}
    selected={true}
  >
    <div>
      2
    </div>
  </ItemContainer>
</div>
`;
